@@ -5,10 +5,11 @@ geosdir = $(includedir)/geos/simplify
 EXTRA_DIST = 
 
 geos_HEADERS = \
+	DouglasPeuckerSimplifier.h 
+
+noinst_HEADERS = \
 	DouglasPeuckerLineSimplifier.h \
-	DouglasPeuckerSimplifier.h \
 	TaggedLineSegment.h \
 	TaggedLineString.h \
-	LineSegmentIndex.h
-
-noinst_HEADERS = 
+	LineSegmentIndex.h \
+	TaggedLineStringSimplifier.h
